// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon AlertCircleIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m16 8-4 4m0 0-4 4m4-4L8 8m4 4 4 4m6-4c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
    />
  </svg>
</div>
`;

exports[`Icon AlertFilledIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8.472 1h7.056c.19 0 .43-.001.665.055.204.05.399.13.578.24.206.126.375.296.509.43l.036.037 4.922 4.922.037.036c.134.134.304.303.43.51.11.178.19.373.24.577.056.236.055.475.055.665v7.056c0 .19.001.43-.055.665-.05.204-.13.399-.24.578a2.799 2.799 0 0 1-.43.509l-.037.036-4.922 4.922-.036.037a2.799 2.799 0 0 1-.51.43c-.178.11-.373.19-.577.24a2.795 2.795 0 0 1-.665.055H8.472c-.19 0-.43.001-.665-.055-.204-.05-.399-.13-.578-.24-.206-.126-.375-.296-.509-.43l-.036-.037-4.922-4.922-.036-.036c-.135-.134-.305-.303-.431-.51a1.999 1.999 0 0 1-.24-.577A2.795 2.795 0 0 1 1 15.528V8.472c0-.19-.001-.43.055-.665a2 2 0 0 1 .24-.578c.126-.206.296-.375.43-.509l.037-.036 4.922-4.922.036-.036c.134-.135.303-.305.51-.431a2 2 0 0 1 .577-.24C8.043 1 8.282 1 8.472 1Zm.235 6.293a1 1 0 1 0-1.414 1.414L10.586 12l-3.293 3.293a1 1 0 0 0 1.414 1.414L12 13.414l3.293 3.293a1 1 0 0 0 1.414-1.414L13.414 12l3.293-3.293a1 1 0 0 0-1.414-1.414L12 10.586 8.707 7.293Z"
      fill="currentColor"
      stroke="none"
    />
  </svg>
</div>
`;

exports[`Icon AlertIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16.753 1.797a1 1 0 0 0-.712-.297H8.05a1 1 0 0 0-.706.291l-5.55 5.525a1 1 0 0 0-.294.709v7.86a1 1 0 0 0 .289.703l5.554 5.615a1 1 0 0 0 .711.297h7.896a1 1 0 0 0 .706-.291l5.55-5.525a1 1 0 0 0 .294-.709V8.02a1 1 0 0 0-.289-.703l-5.458-5.52ZM8 16l8-8M16 16 8 8"
    />
  </svg>
</div>
`;

exports[`Icon ArchiveIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 8.444V20H4V8.444M10.182 12h3.636M2 4h20v4.444H2V4Z"
    />
  </svg>
</div>
`;

exports[`Icon ArrowDownIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 3v17M17 16l-5 5-5-5"
    />
  </svg>
</div>
`;

exports[`Icon ArrowLeftIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 12H4M8 17l-5-5 5-5"
    />
  </svg>
</div>
`;

exports[`Icon ArrowRightIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3 12h17M16 7l5 5-5 5"
    />
  </svg>
</div>
`;

exports[`Icon ArrowUpDownIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m17 16-4.646 4.646a.5.5 0 0 1-.708 0L7 16m0-8.207 4.646-4.646a.5.5 0 0 1 .708 0L17 7.793"
    />
  </svg>
</div>
`;

exports[`Icon ArrowUpIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 21V4M7 8l5-5 5 5"
    />
  </svg>
</div>
`;

exports[`Icon AttachmentIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m21.44 11.05-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"
    />
  </svg>
</div>
`;

exports[`Icon AvatarIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4.5 19.177C6.743 17.962 9.423 17 12 17s5.257.962 7.5 2.177m-4.295-9.224a2.97 2.97 0 0 1-.382 1.445c-.25.444-.609.822-1.047 1.102a3.332 3.332 0 0 1-3.004.28 3.198 3.198 0 0 1-1.249-.888 3.018 3.018 0 0 1-.666-1.347 2.948 2.948 0 0 1 .075-1.489c.152-.483.425-.922.797-1.28a3.25 3.25 0 0 1 1.643-.845 3.335 3.335 0 0 1 1.856.175 3.18 3.18 0 0 1 1.44 1.135c.352.507.54 1.103.537 1.712Z"
    />
    <circle
      cx="12"
      cy="12"
      r="10.5"
    />
  </svg>
</div>
`;

exports[`Icon BoxIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 21.9979V11.9979M12 11.9979L3.29 6.99795M12 11.9979L20.71 6.99795M7.5 4.26795L16.5 9.41795M11 21.7279C11.304 21.9035 11.6489 21.9959 12 21.9959C12.3511 21.9959 12.696 21.9035 13 21.7279L20 17.7279C20.3037 17.5526 20.556 17.3004 20.7315 16.9968C20.9071 16.6931 20.9996 16.3487 21 15.9979V7.99795C20.9996 7.64722 20.9071 7.30276 20.7315 6.99911C20.556 6.69546 20.3037 6.44331 20 6.26795L13 2.26795C12.696 2.09241 12.3511 2 12 2C11.6489 2 11.304 2.09241 11 2.26795L4 6.26795C3.69626 6.44331 3.44398 6.69546 3.26846 6.99911C3.09294 7.30276 3.00036 7.64722 3 7.99795V15.9979C3.00036 16.3487 3.09294 16.6931 3.26846 16.9968C3.44398 17.3004 3.69626 17.5526 4 17.7279L11 21.7279Z"
    />
  </svg>
</div>
`;

exports[`Icon BusinessIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15 21V3H3v18h12Zm0 0h6V7.5h-6V21ZM7 6v2m0 2v2m4-6v2m0 2v2m7 2v2m0-6v2M7 15h4v6H7v-6Z"
    />
  </svg>
</div>
`;

exports[`Icon CalendarIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8 3v4M16 3v4M21 20V6a1 1 0 0 0-1-1H4a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1ZM3 12h18"
    />
  </svg>
</div>
`;

exports[`Icon CameraIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22 18.5455C22 19.0277 21.8084 19.4901 21.4675 19.8311C21.1265 20.1721 20.664 20.3636 20.1818 20.3636H3.81818C3.33597 20.3636 2.87351 20.1721 2.53253 19.8311C2.19156 19.4901 2 19.0277 2 18.5455V8.54545C2 8.06324 2.19156 7.60078 2.53253 7.25981C2.87351 6.91883 3.33597 6.72727 3.81818 6.72727H7.45455L9.27273 4H14.7273L16.5455 6.72727H20.1818C20.664 6.72727 21.1265 6.91883 21.4675 7.25981C21.8084 7.60078 22 8.06324 22 8.54545V18.5455Z"
    />
    <path
      d="M12 16.7273C14.0083 16.7273 15.6364 15.0992 15.6364 13.0909C15.6364 11.0826 14.0083 9.45455 12 9.45455C9.99169 9.45455 8.36364 11.0826 8.36364 13.0909C8.36364 15.0992 9.99169 16.7273 12 16.7273Z"
    />
  </svg>
</div>
`;

exports[`Icon CarIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19 16H21C21.6 16 22 15.6 22 15V12C22 11.1 21.3 10.3 20.5 10.1C18.7 9.6 16 9 16 9C16 9 14.7 7.6 13.8 6.7C13.3 6.3 12.7 6 12 6H5C4.4 6 3.9 6.4 3.6 6.9L2.2 9.8C2.06758 10.1862 2 10.5917 2 11V15C2 15.6 2.4 16 3 16H5M19 16C19 17.1046 18.1046 18 17 18C15.8954 18 15 17.1046 15 16M19 16C19 14.8954 18.1046 14 17 14C15.8954 14 15 14.8954 15 16M5 16C5 17.1046 5.89543 18 7 18C8.10457 18 9 17.1046 9 16M5 16C5 14.8954 5.89543 14 7 14C8.10457 14 9 14.8954 9 16M9 16H15"
    />
  </svg>
</div>
`;

exports[`Icon ChartBarIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 21H6.2c-1.12 0-1.68 0-2.108-.218a2 2 0 0 1-.874-.874C3 19.48 3 18.92 3 17.8V3m5 5v9m10-4v4M13 5v12"
    />
  </svg>
</div>
`;

exports[`Icon ChartLineIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 21H4.6c-.56 0-.84 0-1.054-.109a1 1 0 0 1-.437-.437C3 20.24 3 19.96 3 19.4V3m17 5-3.919 4.183c-.148.158-.223.237-.312.278a.5.5 0 0 1-.253.044c-.098-.01-.194-.06-.387-.16l-3.258-1.69c-.193-.1-.289-.15-.387-.16a.5.5 0 0 0-.253.044c-.09.04-.164.12-.312.278L7 15"
    />
  </svg>
</div>
`;

exports[`Icon CheckIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 6 9 17l-5-5"
    />
  </svg>
</div>
`;

exports[`Icon ChevronDownIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m6 9 6 6 6-6"
    />
  </svg>
</div>
`;

exports[`Icon ChevronLeftIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m15 18-6-6 6-6"
    />
  </svg>
</div>
`;

exports[`Icon ChevronRightIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m9 18 6-6-6-6"
    />
  </svg>
</div>
`;

exports[`Icon ChevronUpIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m18 15-6-6-6 6"
    />
  </svg>
</div>
`;

exports[`Icon ChevronsLeftIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m11 17-5-5 5-5M18 17l-5-5 5-5"
    />
  </svg>
</div>
`;

exports[`Icon ChevronsRightIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m13 17 5-5-5-5M6 17l5-5-5-5"
    />
  </svg>
</div>
`;

exports[`Icon ChevronsUpDownIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m7.5 8 4.323-4.323a.25.25 0 0 1 .354 0L16.5 8M16.5 16l-4.323 4.323a.25.25 0 0 1-.354 0L7.5 16"
    />
  </svg>
</div>
`;

exports[`Icon ClockIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 6.6V12l3.6 1.8M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
    />
  </svg>
</div>
`;

exports[`Icon CloseIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M18 6 6 18M6 6l12 12"
    />
  </svg>
</div>
`;

exports[`Icon CodeIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M13.5 6L10 18M6.5 8.5L3 12L6.5 15.5M17.5 8.5L21 12L17.5 15.5"
    />
  </svg>
</div>
`;

exports[`Icon CopyIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      height="12"
      rx="1"
      width="12"
      x="9"
      y="9"
    />
    <path
      d="M5 15H4a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v1"
    />
  </svg>
</div>
`;

exports[`Icon CornerDownRightIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m15 10 5 5m0 0-5 5m5-5H8a4 4 0 0 1-4-4V4"
    />
  </svg>
</div>
`;

exports[`Icon DeleteIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3 6h18M10 17.5V10m4 7.5V10m-.2-8h-3.6C9.537 2 9 1.895 9 3v3h6V3c0-1.105-.537-1-1.2-1Zm4.857 18.777c-.063.691-.693 1.223-1.45 1.223H6.794c-.757 0-1.387-.532-1.45-1.223L4 6h16l-1.343 14.777Z"
    />
  </svg>
</div>
`;

exports[`Icon DownloadIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 16v3.668c-.003.352-.115.69-.314.939-.198.249-.467.39-.748.393H4.062c-.281-.003-.55-.144-.748-.393A1.531 1.531 0 0 1 3 19.668V16m9-13v12m0 0 4-4m-4 4-4-4"
    />
  </svg>
</div>
`;

exports[`Icon EditIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7M18.5 2.5a2.121 2.121 0 1 1 3 3L12 15l-4 1 1-4 9.5-9.5Z"
    />
  </svg>
</div>
`;

exports[`Icon EmailIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2m20 0v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6m20 0-10 7L2 6"
    />
  </svg>
</div>
`;

exports[`Icon EmailOpenIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22 10c0-.63-.3-1.22-.8-1.6l-8-6a2 2 0 0 0-2.4 0l-8 6A2 2 0 0 0 2 10m20 0v10a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V10m20 0-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 10"
    />
  </svg>
</div>
`;

exports[`Icon ExitIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4M16 17l5-5-5-5M21 12H9"
    />
  </svg>
</div>
`;

exports[`Icon ExternalLinkIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9 15 21 3M15 3h6M21 9V3M7 3H4.09A1.069 1.069 0 0 0 3 4.037v15.898A1.077 1.077 0 0 0 4.062 21h15.876A1.069 1.069 0 0 0 21 19.934V17"
    />
  </svg>
</div>
`;

exports[`Icon FacebookIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M17 2h-3a5 5 0 0 0-5 5v3H6v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3V2Z"
    />
  </svg>
</div>
`;

exports[`Icon FactoryIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m17.183 12.846 3.135.784c.4.1.682.46.682.873V20.1a.9.9 0 0 1-.9.9H3.9a.9.9 0 0 1-.9-.9v-9.647a.9.9 0 0 1 1.118-.873l11.262 2.815m1.803.45a.9.9 0 0 0 1.117-.873V3.9a.9.9 0 0 0-.9-.9h-1.8a.9.9 0 0 0-.9.9v7.622a.9.9 0 0 0 .68.873m1.803.45-1.801-.45h-.002M7.5 17.4h-.9v-.9h.9v.9Zm3.6-.9h.9v.9h-.9v-.9Z"
    />
  </svg>
</div>
`;

exports[`Icon FileIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"
    />
    <path
      d="M13 2v7h7"
    />
  </svg>
</div>
`;

exports[`Icon FileTextIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8m-6-6 6 6m-6-6v6h6m-4 5H8m8 4H8m2-8H8"
    />
  </svg>
</div>
`;

exports[`Icon FilterIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3 6h18M3 12h18M3 18h18M7 4v4m8 2v4m-8 2v4"
    />
  </svg>
</div>
`;

exports[`Icon FlagFilledIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4 15s1-1 4-1 5 2 8 2 4-1 4-1V3s-1 1-4 1-5-2-8-2-4 1-4 1v12Zm0 0v7"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`Icon FlagIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4 15s1-1 4-1 5 2 8 2 4-1 4-1V3s-1 1-4 1-5-2-8-2-4 1-4 1v12Zm0 0v7"
    />
  </svg>
</div>
`;

exports[`Icon GripIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8.5 13a1 1 0 1 0 0-2 1 1 0 0 0 0 2ZM8.5 6a1 1 0 1 0 0-2 1 1 0 0 0 0 2ZM8.5 20a1 1 0 1 0 0-2 1 1 0 0 0 0 2ZM15.5 13a1 1 0 1 0 0-2 1 1 0 0 0 0 2ZM15.5 6a1 1 0 1 0 0-2 1 1 0 0 0 0 2ZM15.5 20a1 1 0 1 0 0-2 1 1 0 0 0 0 2Z"
    />
  </svg>
</div>
`;

exports[`Icon HelpIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3m.08 4h.01M12 2a10 10 0 1 0 0 20 10 10 0 0 0 0-20Z"
    />
  </svg>
</div>
`;

exports[`Icon HistoryIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3.592 15.663c1.772 4.051 6.197 6.306 10.626 5.121 4.879-1.306 7.78-6.294 6.48-11.14-1.3-4.847-6.31-7.717-11.189-6.411a9.144 9.144 0 0 0-6.687 7.433M6.58 9.661l-3.866 1.034a.546.546 0 0 1-.668-.385L1.009 6.449m10.906.095v5.451l3.638 1.817"
    />
  </svg>
</div>
`;

exports[`Icon HomeIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 11v10a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V11"
    />
    <path
      d="M2 12C3.836 10.077 12 2 12 2s8.164 8.077 10 10"
    />
  </svg>
</div>
`;

exports[`Icon InboxIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22 12h-6l-2 3h-4l-2-3H2"
    />
    <path
      d="M5.45 5.11 2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z"
    />
  </svg>
</div>
`;

exports[`Icon InfoFilledIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 1C5.9 1 1 5.9 1 12s4.9 11 11 11 11-4.9 11-11S18.1 1 12 1Zm0 17a1 1 0 0 1-1-1v-6a1 1 0 1 1 2 0v6a1 1 0 0 1-1 1Zm0-10a1 1 0 1 0 0-2 1 1 0 0 0 0 2Z"
      fill="currentColor"
      stroke="none"
    />
  </svg>
</div>
`;

exports[`Icon InfoIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Zm-10 5v-6m0-4h.01"
    />
  </svg>
</div>
`;

exports[`Icon InstagramIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M17.5 6.5h.01M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5Zm9 9.37a4 4 0 1 1-7.914 1.174A4 4 0 0 1 16 11.37Z"
    />
  </svg>
</div>
`;

exports[`Icon LicenceBusinessIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16 10h2m-2 4h2m-6-4-4.125 4.125L6 12.25M4 4h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2Z"
    />
  </svg>
</div>
`;

exports[`Icon LicenceIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16 10h2m-2 4h2M6.17 15a3 3 0 0 1 5.66 0M11 11a2 2 0 1 1-4 0 2 2 0 0 1 4 0ZM4 4h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2Z"
    />
  </svg>
</div>
`;

exports[`Icon LinkIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M13 9.98189C12.7985 9.8218 12.5832 9.67876 12.3562 9.55462C11.7867 9.24316 11.157 9.05796 10.5097 9.01155C9.86239 8.96515 9.2127 9.05864 8.60468 9.28567C7.99666 9.51271 7.44453 9.86798 6.98574 10.3274L4.27038 13.0455C3.44601 13.8998 2.98986 15.0441 3.00017 16.2319C3.01048 17.4197 3.48643 18.5559 4.32551 19.3958C5.16459 20.2357 6.29967 20.7122 7.48626 20.7225C8.67286 20.7328 9.81603 20.2762 10.6696 19.451L12.2264 17.9017M11 13.7408C11.2015 13.9009 11.4168 14.0439 11.6438 14.168C12.2133 14.4795 12.843 14.6647 13.4903 14.7111C14.1376 14.7575 14.7873 14.664 15.3953 14.437C16.0033 14.2099 16.5555 13.8547 17.0143 13.3953L19.7296 10.6772C20.554 9.82282 21.0101 8.67851 20.9998 7.49073C20.9895 6.30295 20.5136 5.16675 19.6745 4.32683C18.8354 3.48692 17.7003 3.01049 16.5137 3.00017C15.3271 2.98985 14.184 3.44646 13.3304 4.27165L11.7736 5.82094"
    />
  </svg>
</div>
`;

exports[`Icon LinkedInIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-4 0v7h-4v-7a6 6 0 0 1 6-6ZM6 9H2v12h4V9ZM4 6a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"
    />
  </svg>
</div>
`;

exports[`Icon LockIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7 11V7a5 5 0 1 1 10 0v4M5 11h14a2 2 0 0 1 2 2v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-7a2 2 0 0 1 2-2Z"
    />
  </svg>
</div>
`;

exports[`Icon MenuIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3 6h18M3 12h18M3 18h18"
    />
  </svg>
</div>
`;

exports[`Icon MinusIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 12h14"
    />
  </svg>
</div>
`;

exports[`Icon MoveLeftIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m9 7-5 5m0 0 5 5m-5-5h11m5-7v14"
    />
  </svg>
</div>
`;

exports[`Icon MoveRightIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m15 17 5-5m0 0-5-5m5 5H9M4 5v14"
    />
  </svg>
</div>
`;

exports[`Icon PauseIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M6 4h4v16H6zM14 4h4v16h-4z"
    />
  </svg>
</div>
`;

exports[`Icon PermitIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 22h6a2 2 0 0 0 2-2V7l-5-5H6a2 2 0 0 0-2 2v3m10-5v4a2 2 0 0 0 2 2h4M7 16.5 8 22l-3-1-3 1 1-5.5m2 .5a3 3 0 1 0 0-5.999A3 3 0 0 0 5 17Z"
    />
  </svg>
</div>
`;

exports[`Icon PieChartIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21.21 15.89A10 10 0 1 1 8 2.83"
    />
    <path
      d="M22 12A10 10 0 0 0 12 2v10z"
    />
  </svg>
</div>
`;

exports[`Icon PlaneIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20.3259 14.5161L13.8743 10.3871V5.87097C13.8743 3.93548 12.9065 2.32258 11.9388 2C10.9711 2.32258 10.0033 3.93548 10.0033 5.87097V10.3871L3.55169 14.5161C3.1646 14.7742 3.03557 15.1613 3.1646 15.5484L3.29363 16.0645C3.48718 16.5161 3.87428 16.7742 4.32589 16.7097L10.0033 15.5484L10.6485 18.7742L8.71299 20.7097V22L11.9388 21.3548L15.1646 22V20.7097L13.2291 18.7742L13.8743 15.5484L19.5517 16.7097C20.0033 16.7742 20.3904 16.5161 20.584 16.0645L20.7775 15.6129C20.842 15.1613 20.713 14.7742 20.3259 14.5161Z"
    />
  </svg>
</div>
`;

exports[`Icon PlaneLandingIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 21.5H22M3.77 10.27L2 8.5L4 4L5.1 4.55C5.65 4.83 6 5.39 6 6C6 6.61 6.35 7.17 6.9 7.45L8 8L11 2L12.05 2.53C12.3418 2.67534 12.5937 2.88981 12.7836 3.15473C12.9736 3.41965 13.096 3.72699 13.14 4.05L13.86 9.45C13.904 9.77301 14.0264 10.0804 14.2164 10.3453C14.4063 10.6102 14.6582 10.8247 14.95 10.97L19.35 13.17C19.77 13.39 20.13 13.72 20.36 14.13L20.96 15.16C21.45 16.04 20.9 17.14 19.9 17.26L18.72 17.41C18.25 17.47 17.77 17.39 17.35 17.17L4.29 10.65C4.09728 10.5523 3.92167 10.4239 3.77 10.27Z"
    />
  </svg>
</div>
`;

exports[`Icon PlaneTakeoffIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M2 21H21.9746M6.35447 16.3048L3.99746 15.8966L2 11.8138L3.09861 11.2524C3.37741 11.1088 3.68526 11.034 3.99746 11.034C4.30966 11.034 4.61752 11.1088 4.89632 11.2524L5.06611 11.3545C5.34491 11.4981 5.65277 11.5728 5.96497 11.5728C6.27717 11.5728 6.58502 11.4981 6.86383 11.3545L7.99239 10.7931L4.9962 4.66896L5.89506 4.20965C6.22731 4.04261 6.59845 3.97324 6.96705 4.00928C7.33564 4.04533 7.68718 4.18538 7.9824 4.41379L11.9973 7.47586C12.2936 7.70624 12.6469 7.84743 13.0175 7.8835C13.3881 7.91957 13.7612 7.84908 14.0946 7.67999L18.2793 5.57737C18.8141 5.30188 19.4301 5.24001 20.0071 5.40386L20.9759 5.68965C21.1761 5.74646 21.3613 5.84813 21.5182 5.98729C21.6751 6.12644 21.7997 6.29957 21.8829 6.4941C21.9661 6.68862 22.0059 6.89966 21.9993 7.11185C21.9927 7.32405 21.9399 7.53208 21.8448 7.72082L21.4653 8.49655C21.2356 8.96606 20.866 9.35393 20.3966 9.59889L7.57292 16.1007C7.19585 16.2916 6.76942 16.3559 6.35447 16.2844V16.3048Z"
    />
  </svg>
</div>
`;

exports[`Icon PlayIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m5 3 14 9-14 9V3z"
    />
  </svg>
</div>
`;

exports[`Icon PlusIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 5v14M5 12h14"
    />
  </svg>
</div>
`;

exports[`Icon PrintIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M6 9V2h12v7M6 18H4a2 2 0 0 1-2-2v-5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2h-2M6 14h12v8H6v-8Z"
    />
  </svg>
</div>
`;

exports[`Icon ProgressBlockedIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10ZM7 12h10"
    />
  </svg>
</div>
`;

exports[`Icon ProgressDoingIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M6.5 13.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3ZM12 13.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3ZM17.5 13.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3Z"
      fill="currentColor"
      stroke="none"
    />
    <path
      d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
    />
  </svg>
</div>
`;

exports[`Icon ProgressNotRequiredIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m4.93 4.93 14.14 14.14M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
    />
  </svg>
</div>
`;

exports[`Icon ProgressPausedIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M10 16V8m4 8V8m8 4c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
    />
  </svg>
</div>
`;

exports[`Icon ProgressTodoIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
      stroke-dasharray="4 4"
    />
  </svg>
</div>
`;

exports[`Icon RefreshCcwIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 12C21 9.61305 20.0518 7.32387 18.364 5.63604C16.6761 3.94821 14.3869 3 12 3C9.48395 3.00947 7.06897 3.99122 5.26 5.74L3 8M3 8V3M3 8H8M3 12C3 14.3869 3.94821 16.6761 5.63604 18.364C7.32387 20.0518 9.61305 21 12 21C14.516 20.9905 16.931 20.0088 18.74 18.26L21 16M21 16H16M21 16V21"
    />
  </svg>
</div>
`;

exports[`Icon RotateLeftIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4.583 15.745c1.772 4.052 6.197 6.307 10.626 5.122 4.88-1.306 7.78-6.294 6.48-11.14-1.3-4.847-6.309-7.718-11.188-6.412a9.144 9.144 0 0 0-6.688 7.434M7.57 9.742l-3.866 1.035a.546.546 0 0 1-.668-.386L2 6.531"
    />
  </svg>
</div>
`;

exports[`Icon RotateRightIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19.417 15.745c-1.772 4.052-6.197 6.307-10.626 5.122-4.88-1.306-7.78-6.294-6.48-11.14C3.61 4.88 8.62 2.008 13.499 3.314a9.144 9.144 0 0 1 6.687 7.434M16.43 9.742l3.866 1.035a.546.546 0 0 0 .668-.386L22 6.531"
    />
  </svg>
</div>
`;

exports[`Icon ScrollbarArrowLeftIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16.957 6.319a.299.299 0 0 1 .043.147v11.103a.31.31 0 0 1-.161.263.34.34 0 0 1-.327.002l-9.361-5.552a.327.327 0 0 1-.111-.114.299.299 0 0 1 0-.3.319.319 0 0 1 .111-.114l9.361-5.552a.34.34 0 0 1 .327.002.31.31 0 0 1 .118.115Z"
    />
  </svg>
</div>
`;

exports[`Icon ScrollbarArrowRightIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7.043 17.718A.305.305 0 0 1 7 17.57V6.467a.31.31 0 0 1 .161-.263h0a.34.34 0 0 1 .327-.001l9.361 5.551a.321.321 0 0 1 .111.115.296.296 0 0 1 0 .299.31.31 0 0 1-.111.114l-9.361 5.552a.332.332 0 0 1-.161.041.329.329 0 0 1-.284-.157Z"
    />
  </svg>
</div>
`;

exports[`Icon SearchIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m15.557 15.556 6.364 6.364"
    />
    <circle
      cx="9.899"
      cy="9.899"
      r="7"
    />
  </svg>
</div>
`;

exports[`Icon SettingsIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="3"
    />
    <path
      d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"
    />
  </svg>
</div>
`;

exports[`Icon ShipIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 10.3701V13.8M12 10.3701C12.2518 10.3701 12.5007 10.4227 12.7308 10.5249L20.1 13.8C20.1142 15.6991 19.6101 17.5661 18.642 19.2M12 10.3701C11.7482 10.3701 11.4993 10.4227 11.2692 10.5249L3.9 13.8C3.85834 16.3593 4.75835 18.8447 6.429 20.784M12 3V5.7M18.3 12.9V7.5C18.3 7.02261 18.1104 6.56477 17.7728 6.22721C17.4352 5.88964 16.9774 5.7 16.5 5.7H7.5C7.02261 5.7 6.56477 5.88964 6.22721 6.22721C5.88964 6.56477 5.7 7.02261 5.7 7.5V12.9M3 20.1C3.54 20.55 4.08 21 5.25 21C7.5 21 7.5 19.2 9.75 19.2C10.92 19.2 11.46 19.65 12 20.1C12.54 20.55 13.08 21 14.25 21C16.5 21 16.5 19.2 18.75 19.2C19.92 19.2 20.46 19.65 21 20.1"
    />
  </svg>
</div>
`;

exports[`Icon ShippingContainerIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M10 21.8247V13.9247M10 13.9247L2.1 9.02471M10 13.9247L21.9 7.02471M14 19.7247V11.6247M18 17.4247V9.32471M22 7.62471C22 7.02471 21.6 6.42471 21.2 6.12471L14.9 2.22471C14.6409 2.07743 14.348 2 14.05 2C13.752 2 13.4591 2.07743 13.2 2.22471L2.9 8.22471C2.4 8.42471 2 9.02471 2 9.62471V16.2247C2 16.7247 2.4 17.4247 2.8 17.7247L9.1 21.6247C9.35908 21.772 9.65198 21.8494 9.95 21.8494C10.248 21.8494 10.5409 21.772 10.8 21.6247L21.1 15.6247C21.6 15.3247 22 14.6247 22 14.1247V7.62471Z"
    />
  </svg>
</div>
`;

exports[`Icon StarFilledIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m12 2 3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2Z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`Icon StarIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m12 2 3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2Z"
    />
  </svg>
</div>
`;

exports[`Icon SuccessFilledIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 23c6.075 0 11-4.925 11-11S18.075 1 12 1 1 5.925 1 12s4.925 11 11 11Zm5.707-13.293a1 1 0 0 0-1.414-1.414L10 14.586l-2.293-2.293a1 1 0 0 0-1.414 1.414l3 3a1 1 0 0 0 1.414 0l7-7Z"
      fill="currentColor"
      stroke="none"
    />
  </svg>
</div>
`;

exports[`Icon SuccessIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10Z"
    />
    <path
      d="m7 13 3 3 7-7"
    />
  </svg>
</div>
`;

exports[`Icon ThumbsDownIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16 1h2.67A2.31 2.31 0 0 1 21 3v7a2.31 2.31 0 0 1-2.33 2H16m-7 2v4a3 3 0 0 0 3 3l4-9V1H4.72a2 2 0 0 0-2 1.7l-1.38 9a2 2 0 0 0 2 2.3H9Z"
    />
  </svg>
</div>
`;

exports[`Icon ThumbsUpIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M6 21H3a2 2 0 0 1-2-2v-7a2 2 0 0 1 2-2h3m7-2V4a3 3 0 0 0-3-3l-4 9v11h11.28a2 2 0 0 0 2-1.7l1.38-9a2 2 0 0 0-2-2.3H13Z"
    />
  </svg>
</div>
`;

exports[`Icon TimerIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9.5 2h5M12 6a8 8 0 1 1 0 16 8 8 0 0 1 0-16Zm0 0V2m3 9-3 3m7-7-1 1"
    />
  </svg>
</div>
`;

exports[`Icon TractorIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M17.5556 17.3333C17.5556 18.5606 18.5505 19.5556 19.7778 19.5556C21.0051 19.5556 22 18.5606 22 17.3333C22 16.106 21.0051 15.1111 19.7778 15.1111C18.5505 15.1111 17.5556 16.106 17.5556 17.3333ZM17.5556 17.3333H10.3333M20.8889 15.3333V10.6667C20.8889 10.372 20.7718 10.0894 20.5635 9.88099C20.3551 9.67262 20.0725 9.55556 19.7778 9.55556H13.1111L12 6.77778L10.8889 4H5H4.22222V5.11111V11.2222M18.6667 4H17.5556C17.2609 4 16.9783 4.11706 16.7699 4.32544C16.5615 4.53381 16.4444 4.81643 16.4444 5.11111V9.55556M10.8889 15.1111C10.8889 17.5657 8.89904 19.5556 6.44444 19.5556C3.98985 19.5556 2 17.5657 2 15.1111C2 12.6565 3.98985 10.6667 6.44444 10.6667C8.89904 10.6667 10.8889 12.6565 10.8889 15.1111Z"
    />
  </svg>
</div>
`;

exports[`Icon TruckIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M14 18V6C14 5.46957 13.7893 4.96086 13.4142 4.58579C13.0391 4.21071 12.5304 4 12 4H4C3.46957 4 2.96086 4.21071 2.58579 4.58579C2.21071 4.96086 2 5.46957 2 6V17C2 17.2652 2.10536 17.5196 2.29289 17.7071C2.48043 17.8946 2.73478 18 3 18H5M5 18C5 19.1046 5.89543 20 7 20C8.10457 20 9 19.1046 9 18M5 18C5 16.8954 5.89543 16 7 16C8.10457 16 9 16.8954 9 18M15 18H9M15 18C15 19.1046 15.8954 20 17 20C18.1046 20 19 19.1046 19 18M15 18C15 16.8954 15.8954 16 17 16C18.1046 16 19 16.8954 19 18M19 18H21C21.2652 18 21.5196 17.8946 21.7071 17.7071C21.8946 17.5196 22 17.2652 22 17V13.35C21.9996 13.1231 21.922 12.903 21.78 12.726L18.3 8.376C18.2065 8.25888 18.0878 8.16428 17.9528 8.0992C17.8178 8.03412 17.6699 8.00021 17.52 8H14"
    />
  </svg>
</div>
`;

exports[`Icon TwitterIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5 0-.279-.028-.556-.08-.83A7.72 7.72 0 0 0 23 3Z"
    />
  </svg>
</div>
`;

exports[`Icon UnlockIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7 11V7a5 5 0 0 1 9.9-1M5 11h14a2 2 0 0 1 2 2v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-7a2 2 0 0 1 2-2Z"
    />
  </svg>
</div>
`;

exports[`Icon UploadIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 15V3M8 7l4-4M16 7l-4-4M21 16v3.668c-.003.352-.115.69-.314.939-.198.249-.467.39-.748.393H4.062c-.281-.003-.55-.144-.748-.393A1.531 1.531 0 0 1 3 19.668V16"
    />
  </svg>
</div>
`;

exports[`Icon UsersIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16.546 20.182v-1.818a3.637 3.637 0 0 0-3.637-3.637H5.636A3.636 3.636 0 0 0 2 18.364v1.818m20 0v-1.818a3.637 3.637 0 0 0-2.727-3.519M15.636 3.936a3.636 3.636 0 0 1 0 7.046M12.91 7.455a3.636 3.636 0 1 1-7.273 0 3.636 3.636 0 0 1 7.273 0Z"
    />
  </svg>
</div>
`;

exports[`Icon WalletIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3 9a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2M3 11h3c.8 0 1.6.3 2.1.9l1.1.9c1.6 1.6 4.1 1.6 5.7 0l1.1-.9c.5-.5 1.3-.9 2.1-.9H21M5 3h14a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2Z"
    />
  </svg>
</div>
`;

exports[`Icon WarningCircleIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 7v6m0 4h-.01M2 12C2 6.477 6.477 2 12 2s10 4.477 10 10-4.477 10-10 10S2 17.523 2 12Z"
    />
  </svg>
</div>
`;

exports[`Icon WarningFilledIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m23.1 20.1-9.3-18C13.4 1.4 12.7 1 12 1s-1.4.4-1.8 1.1l-9.3 18c-.3.6-.3 1.4.1 2 .4.6 1 1 1.7 1h18.7c.7 0 1.31-.33 1.7-1 .36-.6.3-1.4 0-2ZM12 19c-.6 0-1-.4-1-1s.4-1 1-1 1 .4 1 1-.4 1-1 1Zm1-5c0 .6-.4 1-1 1s-1-.4-1-1V9c0-.6.4-1 1-1s1 .4 1 1v5Z"
      fill="currentColor"
      stroke="none"
    />
  </svg>
</div>
`;

exports[`Icon WarningIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3 22h18c.7 0 1.2-.8.9-1.5l-9-17.8c-.4-.7-1.4-.7-1.8 0l-9 17.8c-.3.7.2 1.5.9 1.5ZM12 14V9m0 9h0"
    />
  </svg>
</div>
`;

exports[`Icon WebsiteIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22 12c0 5.523-4.477 10-10 10m10-10c0-5.523-4.477-10-10-10m10 10H2m10 10C6.477 22 2 17.523 2 12m10 10a15.3 15.3 0 0 0 4-10 15.3 15.3 0 0 0-4-10m0 20a15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10M2 12C2 6.477 6.477 2 12 2"
    />
  </svg>
</div>
`;

exports[`Icon WifiIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4.99992 12.55C6.97649 10.9037 9.46753 10.0022 12.0399 10.0022C14.6123 10.0022 17.1034 10.9037 19.0799 12.55M1.41992 9.00004C4.34234 6.424 8.10422 5.00269 11.9999 5.00269C15.8956 5.00269 19.6575 6.424 22.5799 9.00004M8.52992 16.11C9.54512 15.3888 10.7596 15.0013 12.0049 15.0013C13.2502 15.0013 14.4647 15.3888 15.4799 16.11M11.9999 20H12.0099"
    />
  </svg>
</div>
`;

exports[`Icon WifiOffIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M1 1L23 23M16.72 11.06C17.5391 11.4598 18.305 11.9603 19 12.55M5 12.55C6.48208 11.3108 8.26587 10.4862 10.17 10.16M10.71 5.05C12.8524 4.87737 15.0076 5.13816 17.047 5.81682C19.0865 6.49548 20.9682 7.57808 22.58 9M1.42 9C2.80717 7.77385 4.3977 6.79923 6.12 6.12M8.53 16.11C9.5452 15.3887 10.7597 15.0013 12.005 15.0013C13.2503 15.0013 14.4648 15.3887 15.48 16.11M12 20H12.01"
    />
  </svg>
</div>
`;

exports[`Icon XIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19.555 4 5.333 20m11.395-.206L5.113 4.861A.533.533 0 0 1 5.534 4H7.74a.53.53 0 0 1 .42.206l11.615 14.933a.533.533 0 0 1-.42.861H17.15a.534.534 0 0 1-.42-.206Z"
    />
  </svg>
</div>
`;

exports[`Icon YouTubeIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21.5813 7.19146C21.4733 6.76169 21.2534 6.36792 20.9438 6.04992C20.6341 5.73191 20.2457 5.50094 19.8178 5.38034C18.2542 5 12 5 12 5C12 5 5.74578 5 4.18222 5.41656C3.75429 5.53717 3.36588 5.76814 3.05623 6.08614C2.74659 6.40414 2.52666 6.79791 2.41868 7.22768C2.13253 8.80839 1.99255 10.4119 2.00052 12.0181C1.99032 13.6364 2.1303 15.2521 2.41868 16.8448C2.53773 17.2612 2.76258 17.64 3.0715 17.9445C3.38043 18.2491 3.76299 18.4692 4.18222 18.5834C5.74578 19 12 19 12 19C12 19 18.2542 19 19.8178 18.5834C20.2457 18.4628 20.6341 18.2319 20.9438 17.9139C21.2534 17.5959 21.4733 17.2021 21.5813 16.7723C21.8653 15.2035 22.0052 13.6122 21.9995 12.0181C22.0097 10.3998 21.8697 8.78407 21.5813 7.19146Z"
    />
    <path
      d="M9.95502 14.9793L15.182 12.0181L9.95502 9.0569V14.9793Z"
    />
  </svg>
</div>
`;

exports[`Icon ZoomInIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m14.95 14.95 7.071 7.07m-7.071-7.07a7 7 0 1 0-9.9-9.9 7 7 0 0 0 9.9 9.9ZM10 7v6m-3-3h6"
    />
  </svg>
</div>
`;

exports[`Icon ZoomOutIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-lq07bo-Icon"
    clip-rule="evenodd"
    fill-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m14.95 14.95 7.071 7.07m-7.071-7.07a7 7 0 1 0-9.9-9.9 7 7 0 0 0 9.9 9.9ZM7 10h6"
    />
  </svg>
</div>
`;
